syntax.output
Terminals unused in grammar

   "."
   "["
   "]"
   "vars"
   "then"
   "else"
   "elseif"
   "case"
   "default"
   "print"
   "break"
   "typedef"
   "Unknown"


Rules useless in parser due to conflicts

   11 Main: %empty

   12 Struct: %empty


State 9 conflicts: 8 shift/reduce, 8 reduce/reduce
State 40 conflicts: 8 shift/reduce, 8 reduce/reduce
State 41 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program "EOF"

    1 Program: "program start" "space" program_name ";" "new line" block_list "EOF"

    2 program_name: "any other element must be treated as a word"

    3 Function: BEGIN "space" func_name "(" parameter_list ")" "new line" block_list return_statement END

    4 func_name: "any other element must be treated as a word"

    5 parameter_list: %empty
    6               | func_parameter

    7 func_parameter: type "space" parameter_name
    8               | func_parameter "," "space" func_parameter

    9 return_statement: "return" "new line"

   10 parameter_name: "any other element must be treated as a word"

   11 Main: %empty

   12 Struct: %empty

   13 block_list: %empty
   14           | block_list block

   15 block: Function
   16      | Main
   17      | Struct

   18 BEGIN: "main start"
   19      | "func"
   20      | "while start"
   21      | "for start"
   22      | "if start"
   23      | "switch"
   24      | "struct"

   25 END: "main end"
   26    | "func end"
   27    | "while end"
   28    | "for end"
   29    | "if end"
   30    | "switch end"
   31    | "end struct"
   32    | END "new line"

   33 type: "INT"
   34     | "CHAR"
   35     | "VOID"


Terminals, with rules where they appear

"EOF" (0) 0 1
error (256)
"INT" (258) 33
"CHAR" (259) 34
"VOID" (260) 35
"." (261)
"," (262) 8
"(" (263) 3
")" (264) 3
";" (265) 1
"[" (266)
"]" (267)
"program start" (268) 1
"main start" (269) 18
"main end" (270) 25
"func" (271) 19
"func end" (272) 26
"return" (273) 9
"vars" (274)
"while start" (275) 20
"while end" (276) 27
"for start" (277) 21
"for end" (278) 28
"if start" (279) 22
"then" (280)
"else" (281)
"elseif" (282)
"if end" (283) 29
"switch" (284) 23
"case" (285)
"default" (286)
"switch end" (287) 30
"print" (288)
"break" (289)
"struct" (290) 24
"end struct" (291) 31
"typedef" (292)
"any other element must be treated as a word" (293) 2 4 10
"Unknown" (294)
"space" (295) 1 3 7 8
"new line" (296) 1 3 9 32


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
program_name (44)
    on left: 2, on right: 1
Function (45)
    on left: 3, on right: 15
func_name (46)
    on left: 4, on right: 3
parameter_list (47)
    on left: 5 6, on right: 3
func_parameter (48)
    on left: 7 8, on right: 6 8
return_statement (49)
    on left: 9, on right: 3
parameter_name (50)
    on left: 10, on right: 7
Main (51)
    on left: 11, on right: 16
Struct (52)
    on left: 12, on right: 17
block_list (53)
    on left: 13 14, on right: 1 3 14
block (54)
    on left: 15 16 17, on right: 14
BEGIN (55)
    on left: 18 19 20 21 22 23 24, on right: 3
END (56)
    on left: 25 26 27 28 29 30 31 32, on right: 3 32
type (57)
    on left: 33 34 35, on right: 7


State 0

    0 $accept: . Program "EOF"

    "program start"  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: "program start" . "space" program_name ";" "new line" block_list "EOF"

    "space"  shift, and go to state 3


State 2

    0 $accept: Program . "EOF"

    "EOF"  shift, and go to state 4


State 3

    1 Program: "program start" "space" . program_name ";" "new line" block_list "EOF"

    "any other element must be treated as a word"  shift, and go to state 5

    program_name  go to state 6


State 4

    0 $accept: Program "EOF" .

    $default  accept


State 5

    2 program_name: "any other element must be treated as a word" .

    $default  reduce using rule 2 (program_name)


State 6

    1 Program: "program start" "space" program_name . ";" "new line" block_list "EOF"

    ";"  shift, and go to state 7


State 7

    1 Program: "program start" "space" program_name ";" . "new line" block_list "EOF"

    "new line"  shift, and go to state 8


State 8

    1 Program: "program start" "space" program_name ";" "new line" . block_list "EOF"

    $default  reduce using rule 13 (block_list)

    block_list  go to state 9


State 9

    1 Program: "program start" "space" program_name ";" "new line" block_list . "EOF"
   14 block_list: block_list . block

    "EOF"          shift, and go to state 10
    "main start"   shift, and go to state 11
    "func"         shift, and go to state 12
    "while start"  shift, and go to state 13
    "for start"    shift, and go to state 14
    "if start"     shift, and go to state 15
    "switch"       shift, and go to state 16
    "struct"       shift, and go to state 17

    "EOF"          [reduce using rule 11 (Main)]
    "EOF"          [reduce using rule 12 (Struct)]
    "main start"   [reduce using rule 11 (Main)]
    "main start"   [reduce using rule 12 (Struct)]
    "func"         [reduce using rule 11 (Main)]
    "func"         [reduce using rule 12 (Struct)]
    "while start"  [reduce using rule 11 (Main)]
    "while start"  [reduce using rule 12 (Struct)]
    "for start"    [reduce using rule 11 (Main)]
    "for start"    [reduce using rule 12 (Struct)]
    "if start"     [reduce using rule 11 (Main)]
    "if start"     [reduce using rule 12 (Struct)]
    "switch"       [reduce using rule 11 (Main)]
    "switch"       [reduce using rule 12 (Struct)]
    "struct"       [reduce using rule 11 (Main)]
    "struct"       [reduce using rule 12 (Struct)]

    Function  go to state 18
    Main      go to state 19
    Struct    go to state 20
    block     go to state 21
    BEGIN     go to state 22


State 10

    1 Program: "program start" "space" program_name ";" "new line" block_list "EOF" .

    $default  reduce using rule 1 (Program)


State 11

   18 BEGIN: "main start" .

    $default  reduce using rule 18 (BEGIN)


State 12

   19 BEGIN: "func" .

    $default  reduce using rule 19 (BEGIN)


State 13

   20 BEGIN: "while start" .

    $default  reduce using rule 20 (BEGIN)


State 14

   21 BEGIN: "for start" .

    $default  reduce using rule 21 (BEGIN)


State 15

   22 BEGIN: "if start" .

    $default  reduce using rule 22 (BEGIN)


State 16

   23 BEGIN: "switch" .

    $default  reduce using rule 23 (BEGIN)


State 17

   24 BEGIN: "struct" .

    $default  reduce using rule 24 (BEGIN)


State 18

   15 block: Function .

    $default  reduce using rule 15 (block)


State 19

   16 block: Main .

    $default  reduce using rule 16 (block)


State 20

   17 block: Struct .

    $default  reduce using rule 17 (block)


State 21

   14 block_list: block_list block .

    $default  reduce using rule 14 (block_list)


State 22

    3 Function: BEGIN . "space" func_name "(" parameter_list ")" "new line" block_list return_statement END

    "space"  shift, and go to state 23


State 23

    3 Function: BEGIN "space" . func_name "(" parameter_list ")" "new line" block_list return_statement END

    "any other element must be treated as a word"  shift, and go to state 24

    func_name  go to state 25


State 24

    4 func_name: "any other element must be treated as a word" .

    $default  reduce using rule 4 (func_name)


State 25

    3 Function: BEGIN "space" func_name . "(" parameter_list ")" "new line" block_list return_statement END

    "("  shift, and go to state 26


State 26

    3 Function: BEGIN "space" func_name "(" . parameter_list ")" "new line" block_list return_statement END

    "INT"   shift, and go to state 27
    "CHAR"  shift, and go to state 28
    "VOID"  shift, and go to state 29

    $default  reduce using rule 5 (parameter_list)

    parameter_list  go to state 30
    func_parameter  go to state 31
    type            go to state 32


State 27

   33 type: "INT" .

    $default  reduce using rule 33 (type)


State 28

   34 type: "CHAR" .

    $default  reduce using rule 34 (type)


State 29

   35 type: "VOID" .

    $default  reduce using rule 35 (type)


State 30

    3 Function: BEGIN "space" func_name "(" parameter_list . ")" "new line" block_list return_statement END

    ")"  shift, and go to state 33


State 31

    6 parameter_list: func_parameter .
    8 func_parameter: func_parameter . "," "space" func_parameter

    ","  shift, and go to state 34

    $default  reduce using rule 6 (parameter_list)


State 32

    7 func_parameter: type . "space" parameter_name

    "space"  shift, and go to state 35


State 33

    3 Function: BEGIN "space" func_name "(" parameter_list ")" . "new line" block_list return_statement END

    "new line"  shift, and go to state 36


State 34

    8 func_parameter: func_parameter "," . "space" func_parameter

    "space"  shift, and go to state 37


State 35

    7 func_parameter: type "space" . parameter_name

    "any other element must be treated as a word"  shift, and go to state 38

    parameter_name  go to state 39


State 36

    3 Function: BEGIN "space" func_name "(" parameter_list ")" "new line" . block_list return_statement END

    $default  reduce using rule 13 (block_list)

    block_list  go to state 40


State 37

    8 func_parameter: func_parameter "," "space" . func_parameter

    "INT"   shift, and go to state 27
    "CHAR"  shift, and go to state 28
    "VOID"  shift, and go to state 29

    func_parameter  go to state 41
    type            go to state 32


State 38

   10 parameter_name: "any other element must be treated as a word" .

    $default  reduce using rule 10 (parameter_name)


State 39

    7 func_parameter: type "space" parameter_name .

    $default  reduce using rule 7 (func_parameter)


State 40

    3 Function: BEGIN "space" func_name "(" parameter_list ")" "new line" block_list . return_statement END
   14 block_list: block_list . block

    "main start"   shift, and go to state 11
    "func"         shift, and go to state 12
    "return"       shift, and go to state 42
    "while start"  shift, and go to state 13
    "for start"    shift, and go to state 14
    "if start"     shift, and go to state 15
    "switch"       shift, and go to state 16
    "struct"       shift, and go to state 17

    "main start"   [reduce using rule 11 (Main)]
    "main start"   [reduce using rule 12 (Struct)]
    "func"         [reduce using rule 11 (Main)]
    "func"         [reduce using rule 12 (Struct)]
    "return"       [reduce using rule 11 (Main)]
    "return"       [reduce using rule 12 (Struct)]
    "while start"  [reduce using rule 11 (Main)]
    "while start"  [reduce using rule 12 (Struct)]
    "for start"    [reduce using rule 11 (Main)]
    "for start"    [reduce using rule 12 (Struct)]
    "if start"     [reduce using rule 11 (Main)]
    "if start"     [reduce using rule 12 (Struct)]
    "switch"       [reduce using rule 11 (Main)]
    "switch"       [reduce using rule 12 (Struct)]
    "struct"       [reduce using rule 11 (Main)]
    "struct"       [reduce using rule 12 (Struct)]

    Function          go to state 18
    return_statement  go to state 43
    Main              go to state 19
    Struct            go to state 20
    block             go to state 21
    BEGIN             go to state 22


State 41

    8 func_parameter: func_parameter . "," "space" func_parameter
    8               | func_parameter "," "space" func_parameter .

    ","  shift, and go to state 34

    ","       [reduce using rule 8 (func_parameter)]
    $default  reduce using rule 8 (func_parameter)


State 42

    9 return_statement: "return" . "new line"

    "new line"  shift, and go to state 44


State 43

    3 Function: BEGIN "space" func_name "(" parameter_list ")" "new line" block_list return_statement . END

    "main end"    shift, and go to state 45
    "func end"    shift, and go to state 46
    "while end"   shift, and go to state 47
    "for end"     shift, and go to state 48
    "if end"      shift, and go to state 49
    "switch end"  shift, and go to state 50
    "end struct"  shift, and go to state 51

    END  go to state 52


State 44

    9 return_statement: "return" "new line" .

    $default  reduce using rule 9 (return_statement)


State 45

   25 END: "main end" .

    $default  reduce using rule 25 (END)


State 46

   26 END: "func end" .

    $default  reduce using rule 26 (END)


State 47

   27 END: "while end" .

    $default  reduce using rule 27 (END)


State 48

   28 END: "for end" .

    $default  reduce using rule 28 (END)


State 49

   29 END: "if end" .

    $default  reduce using rule 29 (END)


State 50

   30 END: "switch end" .

    $default  reduce using rule 30 (END)


State 51

   31 END: "end struct" .

    $default  reduce using rule 31 (END)


State 52

    3 Function: BEGIN "space" func_name "(" parameter_list ")" "new line" block_list return_statement END .
   32 END: END . "new line"

    "new line"  shift, and go to state 53

    $default  reduce using rule 3 (Function)


State 53

   32 END: END "new line" .

    $default  reduce using rule 32 (END)
